--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 }
 
-version 'gradle_8.0'
+version 'test'
 
 mainClassName = 'com.fieryslug.reinforcedcoral.Main'
 sourceCompatibility = 1.8
@@ -29,6 +29,8 @@ dependencies {
     compile group: 'uk.co.caprica', name: 'vlcj', version: '3.8.0'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
     compile group: 'org.slf4j', name: 'slf4j-simple', 'version': '1.6.6'
+    compile 'com.google.guava:guava:28.0-jre'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.6.6'
 }
