--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 }
 
-version 'test'
+version 'gradle_8.0a'
 
 mainClassName = 'com.fieryslug.reinforcedcoral.Main'
 sourceCompatibility = 1.8
@@ -22,6 +22,7 @@ sourceSets {
 }
 
 dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile group: 'info.clearthought', name: 'table-layout', version: '4.3.0'
     compile group: 'org.json', name: 'json', version: '20180813'
     compile group: 'javax.media', name: 'jmf', version: '2.1.1e'
